--- a/03 - Image Segmentation/seg_mri.ipynb
+++ b/03 - Image Segmentation/seg_mri.ipynb
@@ -390,6 +390,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73ad4042",
+   "metadata": {},
+   "source": [
+    "Several metrics are useful in evaluating a segmentation model. Since a segmentation problem can be seen as a pixel-wise classification, `CrossEntropyLoss` (or in this case `BinaryCrossEntropyLoss`) can be used.\n",
+    "Another approach is to use geometric methods that measure, in some way, the overlap of the areas.\n",
+    "\n",
+    "![](./images/dicevsiou.png)\n",
+    "\n",
+    "\n",
+    "Quick schema on which one to pick\n",
+    "\n",
+    "| Scenario                        | Recommended Loss                     |\n",
+    "|----------------------------------|---------------------------------------|\n",
+    "| Balanced dataset                | CrossEntropy                          |\n",
+    "| Class imbalance (e.g., organs)  | Dice Loss         |\n",
+    "| Strict overlap quality needed   | IoU or Combo: Dice + IoU              |\n",
+    "| Multi-class segmentation        | CE or per-class Dice averaged         |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "42ecee83",
@@ -412,14 +433,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3eafa9bc",
+   "metadata": {},
+   "source": [
+    "**Exercise** Experiment further with these losses trying to tune the weights `alpha`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff8429e6",
    "metadata": {},
    "source": [
     "### Construct the model\n",
     "\n",
-    "![](./resnet34.jpg)\n",
+    "#### ResNet34\n",
     "\n",
-    "![](./unet.png)"
+    "![ResNet34](./images/resnet34.jpg)\n",
+    "\n",
+    "\n",
+    "#### U-Net\n",
+    "\n",
+    "![](./images/u-net-original.png)\n",
+    "\n",
+    "![](./images/unet.png)"
    ]
   },
   {
@@ -498,6 +534,14 @@
     "        out = self.final_conv(up)\n",
     "\n",
     "        return out\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f1e842d",
+   "metadata": {},
+   "source": [
+    "**Exercise** It is possible to substitute the transposed convolution operation with upsampling followed by a \"normal\" convolution. In this case the \"upscaling\" part is not learned but fixed. Try to experiment with that."
    ]
   },
   {
