--- a/04 - Object Detection/object_detection.ipynb
+++ b/04 - Object Detection/object_detection.ipynb
@@ -2,14 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8f752819",
+   "metadata": {},
+   "source": [
+    "# Object Detection & Co.\n",
+    "\n",
+    "![](images/tasks.png)\n",
+    "\n",
+    "## Basic Idea\n",
+    "\n",
+    "![](images/arch.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8cf34bb3",
    "metadata": {},
    "source": [
-    "# Object detection/segmentation/pose estimation using YOLO\n",
     "\n",
-    "YOLO (**You Only <s>Live</s> Look Once**) is a series of very popular **real-time** object detection systems with very good performance.\n",
+    "## YOLO (**You Only <s>Live</s> Look Once**)\n",
     "\n",
-    "## History\n",
+    "YOLO is a series of very popular **real-time** object detection systems with very good performance.\n",
+    "\n",
+    "![](./images/yolo-arch.png)\n",
+    "\n",
+    "## (Partial) History of YOLO algorithm\n",
     "\n",
     "| Version           | Year | Authors / Organization                    | New Publication or Refinement | Notes                                                                       |                                                                                                               |\n",
     "| ----------------- | ---- | ----------------------------------------- | ----------------------------- | --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------- |\n",
